--- a/src/lib/CardFull.css
+++ b/src/lib/CardFull.css
@@ -1,23 +1,13 @@
-#root {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  background: white;
-
-}
-
-
-#card_template {
-  position:fixed;
+.card {
   background: white;
   border: 1px solid black;
   border-radius: 3;
   display: flex;
+  visibility: none;
   flex-direction: column;
   justify-content: center;
   padding: 10px;
   padding-bottom: 30px;
-  visibility: hidden;
 
   width: 300px;
   height: 450px;
